🛠️ refactor : 일급 컬렉션을 사용하여 코드 구조 개선 및 save repository추가